<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Black Jack Quiz</string>
    <string name="black_jack_quiz_option">Black Jack Quiz</string>
    <string name="solution_table_option">Solution Table</string>
    <string name="counting_quiz_option">Counting Quiz</string>
    <string name="complete_game_option">Multiplayer Game</string>
    <string name="response_game_option">Complete Game</string>

    <string name="show_count">Show Count</string>
    <string name="cancel">Back</string>
    <string name="restart">Restart Game</string>
    <string name="user_count_text_str">The count is: </string>
    <string name="user_count_edit_str">What\'s the count?!</string>
    <string name="count_result_info_text_str">RESULT:</string>

    <string name="message_for_cheaters">You have to tell us what you think the count is first. Come on, it\'s not like we are recording your scores ;)</string>

    <string name="tag_blackJackQuizFragment">blackJackQuizFragment</string>
    <string name="tag_solutionTableFragment">solutionTableFragment</string>
    <string name="tag_countingQuizFragment">countingQuizFragment</string>
    <string name="tag_countDialogFragment">countDialogFragment</string>
    <string name="tag_completeGameFragment">completeGameFragment</string>
    <string name="tag_responseGameFragment">responseGameFragment</string>

    <color name="black">#000000</color>

</resources>
